--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
   font-family: "Barlow Semi Condensed", sans-serif;
   font: 13px;
   background-color: hsl(210, 46%, 95%);
-  height: 100vh;
+  /* height: 100vh; */
   display: grid;
   place-content: center;
   padding: 0;
@@ -28,8 +28,8 @@ body {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 2rem;
-  width: 100%;
-  max-width: 800px;
+  width: 600;
+  max-width: 100%;
 }
 
 img {
