--- a/style.css
+++ b/style.css
@@ -15,9 +15,9 @@
 
 body {
   font-family: "Barlow Semi Condensed", sans-serif;
-  font-size: 13px;
+  font-size: 10px;
   background-color: hsl(210, 46%, 95%);
-  /* height: 100vh; */
+  height: 100vh;
   display: grid;
   place-content: center;
   padding: 0;
@@ -47,7 +47,7 @@ img {
 }
 
 .card p {
-  font-size: 1.5rem !important;
+  font-size: 1.2rem !important;
   font-weight: 700;
 }
 
